test/test_suite/errors/empty_fault.c3
module test;
fault; // #error: Expected
